class Cinema:

    def _init_(self, id, responsavel, cnpj, endereco, telefone, cep, email):
        self._id = id
        self._responsavel = responsavel
        self._cnpj = cnpj
        self._endereco = endereco
        self._telefone = telefone
        self._cep = cep
        self._email = email