@startuml Diagrama Herança Cinema - Grupo 1

class Cinema {
    - id: Interger
    - responsavel: String
    - cnpj: Interger 
    - endereco: String
    - telefone: Interger
    - cep: Interger
    - email: String
    + construtor(id, resposavel, cnpj, endereco, telefone, cep, email)
    + contato(id, responsavel, telefone, email)
    + cadastro completo(id, responsavel, cnpj, endereco, telefone, cep, email)
}

class Sala{
    - num_sala: Interger
    - capacidade: Interger
    - assentos: Interger
    - ocupacao: Boolean
    + construtor(num_sala, capacidade, assentos, ocupacao)
    + alocacao_vendas(assentos, ocupacao)
    + capacidade_salas(num_sala, capacidade)
}

class Sessao{
    - data_sessao
    - hora_sessao
    - encerrada: Boolean
    - sala: Sala
    + construtor(data_sessao, hora_sessao, encerrada, sala)
    + sala_sessao(data_sessao, hora_sessao, sala)
    + situacao_sessao(encerrada, data_sessao, hora_sessao, sala)    
}

class Ingresso {
    - tipo: Interger
    - id: Interger
    - preco_ingresso: Float
    - sessao: Sessao
    + construtor(tipo, id, preco_ingresso, sessao)
    + tipo_ingresso(tipo, id)
    + preco_ingresso(tipo, preco_ingresso, sessao)
}

class Cliente{
    - nome: String
    - cpf: Interger
    - data_nascimento: Interger
    - telefone: Interger
    - email: String
    - ingresso: Ingresso
    - compras: Loja
    + construtor(nome, cpf, data_nascimento, telefone, email, ingresso, compras)
    + contato_cliente(nome, telefone, email)
    + consumo_cliente(nome, email, ingresso, compras)    
}

Cinema <|-- Sala
Sala --|> Sessao
Filme --|> Sessao
Ingresso <|-- Cliente
Cinema <|-- Loja
Loja <|-- Cliente
Sessao --|> Ingresso
@enduml